# update-metadata-contract

./: Anchor.toml
programs/update_metadata/: Cargo.toml
programs/update_metadata/src/: lib.rs
tests/: update_metadata.ts
