[package]
name = "update_metadata"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "update_metadata"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.1"
anchor-spl = "0.24.1"
spl-token = "3.1.1"
mpl-token-metadata = {version = "1.3.6", features = ["no-entrypoint"]}